# test

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Primes.hpp  README.md  macros.h  main.cpp  main_Primes.cpp  vimrc.mac.config  vimrc.win.config
F17-A1-RichardLee0211/: Makefile  README.md  functions.c  functions.h  main.c  test_results.txt
F17-A12-YitianChen1996-master/: Makefile  hellosh.c  hellosh_defines.c  hellosh_defines.h  loader.c  test.c  test2.c
Lab12/: Lab12.txt  Makefile  thread.c  thread2.c  thread3.c
testACM/: Hash.cpp  Makefile  README.md  test1.cpp  test2.cpp
testACM/20190228BingACM/: README.md  test.cpp  test2  test2.cpp
testACM/AlgoriCompIntro/: Hash.cpp  README.md  problem5-2.cpp
testACM/geeksforgeeks/: README.md
testACM/handbook/: README.md  output.txt  test.cpp
testACM/leetCode/: README.md
testACM/twoSum/: README.md  main.cpp  test.cpp  test.py
testADVobfuscator/: README.md
testBashScript/: mailtoGuest.sh  setup.sh
testBashScript/testBashrc/: bash-cheatsheet.sh
testBashScript/testSed/: datafile  script
testC/: shell.h
testC/Hack/: test1.c
testC/TCP/: client.c  server.c
testC/gdb/: README.md  fork.c  test.c
testC/llvm/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile.bak  cmake_install.cmake
testC/macro/: Deque.hpp  macros.h  main.c  note.md
testC/pthread/: pthread.c
testC/security/: test.c
testC/sort/: mergeSort.c
testC/test/: Makefile  hello.cpp
testC/testCMake/: Makefile  tutorial.cxx
testC/testIPC/: test1.c
testC/testMake/: count_words.c  lexer.l
testC/testPerformProfile/: test.cpp
testCMake/: CMakeCache.txt  CMakeLists.txt  Makefile  READEME.md  cmake_install.cmake  tutorial.cxx
testCMake/MathFunctions/: Makefile
testCMake/book/: CMakeLists.FLTK.txt  CMakeLists.Qt.txt  CMakeLists.txt  README.md
testCMakePractice/t2/: CMakeLists.txt
testCMakePractice/t3/lib/: CMakeLists.txt
testCMakePractice/t5/src/: CMakeLists.txt  main.c
testCpp/: .ycm_extra_conf.py  README.md  a.out  algo1.cpp  string.cpp  test.cpp  test2.cpp
testDB/: README.md
testDataMining/: README.md  test.py  test_plot.py
testDesignPattern/: README.md  test.java
testHack/: README.kaliTutorial01.md  README.md  README.nmap.md
testHugo/: README.md
testIPC/: README.md
testJava/: README.md  test.java
testLLVM/: .ycm_extra_conf.py  Makefile  README.md  note.md  test.cpp
testLLVM/llvm/: CMakeLists.txt  Makefile  note.md
testLLVM/llvm/src/: CMakeLists.txt  mysource.cpp
testLatex/: .gitignore  Makefile  README.LateX.md  README.PDFviewer.md  README.md  ch05test.tex  ch07test.tex  ch09test.tex  ch10test.tex  ch11test.tex  ch13test.tex  ch14test.tex  ch15test.tex  ch15test2.tex  ch15test3.tex  ch15test3.toc  ch16test.tex  ch17test.tex  ch18test.tex  ch27test.tex  ch32test.tex  ch38test.tex  ch6test.tex  ch7test.tex  ch9test.tex  ch9test.toc  columbidaeTitle.sty  data.bib  test.c  test1.tex  test2.tex  test3.tex  test4.tex  test5.tex  testResume.tex  uml.tex  uml2.tex
testLinuxSetup/: .Xresources  README.UbuntuSetup.md  README.kali.md  README.md  UbuntuSetup.md  i3.config  test.sh  tmux.conf  wallpaper.sh
testMacSetup/: README.md  tmux.conf
testMake/: Makefile  README.md  lexer.c
testMath/: README.md
testOpenCV/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  README.md  install_log.md
testPen/: Google500.txt  READMD.RPi.md  README.SBUCyberSec.quiz.md  README.nmap.md  README.random.md
testPerformProfile/: README.md  callgrind.out.7635  cpuload
testPyTorch/: LogisticRegression.py  README.md  requirements.txt
testPython/: .gitignore  README.md  example1.py  twitter-analysis.py  wangyiyunyinyue.py
testRandom/: README.50essentialConcept.md  README.md  README.pythonDataMining.md  README.statisticonTechnology.md  basicHeader.py  random.clang++.csv  random.cpp  random2.clang++.csv  test.py  test.tex  test01.py  test02.py  test03.py  test04.py  test05.py  test2.py  test_plot.py
testRanger/: README.md  rc.default.conf  scope.sh  test.py  test.sh
testSC_IM/: test.csv  test.cvs  youtubeChannel.sc
testSecurity/: README.lordPE.md  README.md  test.cpp
testSysAdmin/: README.htop.md  README.md
testTmux/: development
testYoutube/: README.md
tmp/: README.wenchen.md  test.py  vimrc.config  wenchen_t01.py  wenchen_t02.py
(+472 files in other folders)
