cmake_minimum_required(VERSION 3.8)

PROJECT (HELLO)
add_subdirectory(src bin)
# SET(SRC_LIST main.c)
# MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
# MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
# ADD_EXECUTABLE(hello ${SRC_LIST})


# the most easy version
# PROJECT (HELLO)
# ADD_EXECUTABLE(hello main.c)
